# address-book

./: .gitignore  CMakeLists.txt  Makefile  README.md  address_book
include/: menu.h  utils.h
resources/: storage.txt
src/: application.c  application.h  main.c  menu.c  menu.h  storage.c  storage.h
